<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tilde_early_deadline_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="y-okumura@todo.todo">y-okumura</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>caret_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tilde</depend>
  <depend>tilde_msg</depend>
  <depend>tilde_deadline_detector</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
